--- a/CardAcountBook/res/layout/my_card_list_layout.xml
+++ b/CardAcountBook/res/layout/my_card_list_layout.xml
@@ -26,7 +26,7 @@
             android:paddingRight="5dp"
             android:paddingTop="5dp"
             android:text="@string/test_card_text"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="20dp" />
 
         <TextView
@@ -37,7 +37,7 @@
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:text="@string/test_card_num"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="15dp" />
     </LinearLayout>
 
