--- a/trunk/CardAcountBook/res/layout/detail_view.xml
+++ b/trunk/CardAcountBook/res/layout/detail_view.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/card_ace"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/card_ace" >
 
     <ListView
         android:id="@+id/android:list"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:cacheColorHint="#00000000" >
+        android:cacheColorHint="#00000000">
     </ListView>
 
 </LinearLayout>
