--- a/trunk/CardAcountBook/res/layout/my_card_tmp.xml
+++ b/trunk/CardAcountBook/res/layout/my_card_tmp.xml
@@ -9,7 +9,8 @@
         android:id="@+id/android:list"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:cacheColorHint="#00000000" >
+        android:cacheColorHint="#00000000"
+        android:longClickable="true" >
     </ListView>
 
 </LinearLayout>
