--- a/CardAcountBook/res/layout/detail_view.xml
+++ b/CardAcountBook/res/layout/detail_view.xml
@@ -2,14 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/card_ace" >
+    android:background="@drawable/card_ace"
+    android:gravity="right"
+    android:orientation="vertical" >
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:prompt="@string/prompt" />
 
     <ListView
         android:id="@+id/android:list"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:cacheColorHint="#00000000">
+        android:cacheColorHint="#00000000" >
     </ListView>
 
 </LinearLayout>
