--- a/CardAcountBook/res/values/company_name_number.xml
+++ b/CardAcountBook/res/values/company_name_number.xml
@@ -4,4 +4,8 @@
     <string name="phoneNum_NH">15881600</string>
     <string name="phoneNum_KB">15881788</string>
 
+    <string name="NH_card">NH카드</string>
+    <string name="KB_check">KB국민체크</string>
+    <string name="KB_credit">KB국민카드</string>
+    	
 </resources>
