--- a/CardAcountBook/res/layout/main.xml
+++ b/CardAcountBook/res/layout/main.xml
@@ -4,22 +4,76 @@
     android:layout_height="match_parent"
     android:background="@drawable/card_ace"
     android:orientation="horizontal" >
-   <!-- For test -->
+
+    <!-- For test -->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/from_date_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="50dp"
+            android:layout_weight="5"
+            android:background="@color/grey"
+            android:clickable="true"
+            android:gravity="left"
+            android:paddingBottom="5dp"
+            android:paddingLeft="15dp"
+            android:paddingTop="5dp"
+            android:textColor="@color/black"
+            android:textSize="15dp" />
+
+        <TextView
+            
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:layout_weight="1"
+            android:background="@color/grey"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:text="@string/dash"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/to_date_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="50dp"
+            android:layout_weight="15"
+            android:background="@color/grey"
+            android:clickable="true"
+            android:gravity="left"
+            android:paddingBottom="5dp"
+            android:paddingLeft="15dp"
+            android:paddingTop="5dp"
+            android:textColor="@color/black"
+            android:textSize="15dp" />
+    </LinearLayout>
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="50dp"
         android:background="#555555"
         android:gravity="left"
         android:paddingBottom="5dp"
         android:paddingLeft="15dp"
         android:paddingTop="5dp"
-        android:text="현재 사용 금액"
+        android:text="@string/today_payment"
         android:textSize="20dp" />
 
     <TextView
+        android:id="@+id/today_payment"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
@@ -30,11 +84,9 @@
         android:paddingBottom="10dp"
         android:paddingRight="15dp"
         android:paddingTop="10dp"
-        android:text="0원"
         android:textColor="@color/black"
         android:textSize="30dp" />
-	<!-- End -->
-	
+
     <TableRow>
 
         <Button
