--- a/trunk/CardAcountBook/res/layout/main.xml
+++ b/trunk/CardAcountBook/res/layout/main.xml
@@ -18,7 +18,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="50dp"
-            android:layout_weight="5"
             android:background="@color/grey"
             android:clickable="true"
             android:gravity="left"
@@ -29,31 +28,29 @@
             android:textSize="15dp" />
 
         <TextView
-            
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:layout_weight="1"
             android:background="@color/grey"
-            android:textColor="@color/black"
             android:gravity="center"
+            android:paddingLeft="5dp"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
             android:text="@string/dash"
+            android:textColor="@color/black"
             android:textSize="15dp" />
 
         <TextView
             android:id="@+id/to_date_view"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:layout_marginTop="50dp"
-            android:layout_weight="15"
             android:background="@color/grey"
             android:clickable="true"
             android:gravity="left"
             android:paddingBottom="5dp"
-            android:paddingLeft="15dp"
+            android:paddingLeft="10dp"
             android:paddingTop="5dp"
             android:textColor="@color/black"
             android:textSize="15dp" />
