--- a/trunk/CardAcountBook/res/layout/main.xml
+++ b/trunk/CardAcountBook/res/layout/main.xml
@@ -2,11 +2,11 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/card_ace"
+    android:background="@drawable/main1"
     android:orientation="horizontal" >
 
     <!-- For test -->
-
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="27dp"
             android:background="@color/grey"
             android:clickable="true"
             android:gravity="left"
@@ -30,7 +30,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="27dp"
             android:background="@color/grey"
             android:gravity="center"
             android:paddingLeft="5dp"
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="27dp"
             android:background="@color/grey"
             android:clickable="true"
             android:gravity="left"
@@ -54,6 +54,7 @@
             android:paddingTop="5dp"
             android:textColor="@color/black"
             android:textSize="20dp" />
+
     </LinearLayout>
 
     <TextView
@@ -130,6 +131,7 @@
             style="@style/MainText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="23dp"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="2dp"
@@ -142,6 +144,7 @@
             style="@style/MainText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="23dp"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="3dp"
             android:layout_marginRight="3dp"
@@ -154,6 +157,7 @@
             style="@style/MainText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="23dp"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="15dp"
