--- a/CardAcountBook/res/layout/my_card.xml
+++ b/CardAcountBook/res/layout/my_card.xml
@@ -2,58 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/card_ace"
     android:orientation="vertical" >
 
-    <FrameLayout
-        android:id="@+id/frameLayout1"
+    <ListView
+        android:id="@+id/android:list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.35" >
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#ff1493"
-            android:gravity="center"
-            android:text="내가 사용하는 카드"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#ffffff"
-            android:textSize="20sp" />
-    </FrameLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3.96"
-        android:orientation="vertical" >
-    </LinearLayout>
- -
-
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="fill_parent"
-        android:layout_height="65dp" >
-
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:text="카드 추가" />
-
-        <View
-            android:id="@+id/view2"
-            android:layout_width="26dp"
-            android:layout_height="wrap_content" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:text="카드 삭제" />
-    </LinearLayout>
+        android:layout_height="fill_parent"
+        android:cacheColorHint="#00000000"
+        android:longClickable="true" >
+    </ListView>
 
 </LinearLayout>
