--- a/CardAcountBook/res/layout/main.xml
+++ b/CardAcountBook/res/layout/main.xml
@@ -2,81 +2,83 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-	android:background="@drawable/main1"
+    android:background="@drawable/main_background"
     android:orientation="horizontal" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/from_date_view"
-            android:layout_width="130dp"
-            android:layout_height="37dp"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="27dp"
+            android:layout_marginTop="70dp"
             android:background="@drawable/date_view_selector"
             android:clickable="true"
             android:gravity="center"
+            android:paddingBottom="5dp"
             android:textColor="@color/black"
-            android:textSize="20dp" />
+            android:textSize="17dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="27dp"
+            android:layout_marginTop="70dp"
             android:gravity="center"
             android:paddingBottom="5dp"
             android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:paddingTop="5dp"
             android:text="@string/dash"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="20dp" />
 
         <TextView
             android:id="@+id/to_date_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="27dp"
-            android:background="@color/grey"
+            android:layout_marginTop="70dp"
+            android:background="@drawable/date_view_selector"
             android:clickable="true"
-            android:gravity="left"
+            android:gravity="center"
             android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="5dp"
             android:textColor="@color/black"
-            android:textSize="20dp" />
+            android:textSize="17dp" />
     </LinearLayout>
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="400dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:background="#555555"
-        android:gravity="left"
-        android:paddingBottom="5dp"
-        android:paddingLeft="15dp"
-        android:paddingTop="5dp"
-        android:text="@string/today_payment"
-        android:textSize="20dp" />
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/current_pay_background"
+        android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/today_payment"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="#DDDDDD"
-        android:gravity="right"
-        android:paddingBottom="10dp"
-        android:paddingRight="15dp"
-        android:paddingTop="10dp"
-        android:textColor="@color/black"
-        android:textSize="30dp" />
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:text="@string/today_payment"
+            android:textSize="20dp"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/today_payment"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:paddingRight="15dp"
+            android:textColor="@color/black"
+            android:textSize="30dp" />
+    </LinearLayout>
     <!--
     <TableRow>
 
@@ -151,7 +153,7 @@
             android:layout_marginTop="22dp"
             android:layout_weight="1"
             android:src="@drawable/icon_option" />
-    </TableRow>
+    </TableRow>
     -->
 
     <TableRow>
@@ -193,24 +195,12 @@
     <TableRow>
 
         <ImageView
-            android:id="@+id/cash_btn"
-            style="@style/MainText"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginTop="22dp"
-            android:layout_weight="1"
-            android:src="@drawable/icon_cash" />
-
-        <ImageView
             android:id="@+id/notice_btn"
             style="@style/MainText"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginLeft="3dp"
+            android:layout_marginLeft="50dp"
             android:layout_marginRight="3dp"
             android:layout_marginTop="22dp"
             android:layout_weight="1"
@@ -223,7 +213,7 @@
             android:layout_height="90dp"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="2dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginRight="50dp"
             android:layout_marginTop="22dp"
             android:layout_weight="1"
             android:src="@drawable/icon_option" />
