--- a/CardAcountBook/res/values/style.xml
+++ b/CardAcountBook/res/values/style.xml
@@ -17,6 +17,15 @@
         <item name="android:gravity">center_vertical</item>
     </style>
     
+    <style name="MyCardDialogText">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">17dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+    
     <style name="DetailEditDialogText" parent="DetailDialogText">
         <item name="android:textColor">@color/black</item>
         <item name="android:gravity">left</item>
