--- a/CardAcountBook/res/layout/main.xml
+++ b/CardAcountBook/res/layout/main.xml
@@ -93,7 +93,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_weight="1"
-            android:src="@drawable/my_card" />
+            android:src="@drawable/icon_my_card" />
 
         <ImageView
             android:id="@+id/breakdown_stats_btn"
@@ -117,7 +117,6 @@
 
         <ImageView
             android:id="@+id/notice_btn"
-            style="@style/MainText"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_marginBottom="5dp"
@@ -129,7 +128,6 @@
 
         <ImageView
             android:id="@+id/option_btn"
-            style="@style/MainText"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_marginBottom="5dp"
