--- a/CardAcountBook/res/values/style.xml
+++ b/CardAcountBook/res/values/style.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="MainText">
+    <style name="GraphTextStyle">
         <item name="android:gravity">center</item>
         <item name="android:textColor">#000000</item>
-        <item name="android:textSize">13dp</item>
+        <item name="android:textSize">20dp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
