--- a/CardAcountBook/res/layout/detail_view.xml
+++ b/CardAcountBook/res/layout/detail_view.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/card_ace"
+    android:background="@drawable/other_background"
     android:gravity="right"
     android:orientation="vertical" >
 
