--- a/CardAcountBook/res/values/style.xml
+++ b/CardAcountBook/res/values/style.xml
@@ -40,6 +40,19 @@
         <item name="android:textColor">@color/grey</item>
         <item name="android:textSize">13sp</item>
     </style>
+    
+    <style name="ExpandableGroupListText" parent="OptionTitleText">
+        <item name="android:textSize">20sp</item>
+    </style>
+    
+    <style name="ExpandableChildListText">
+        <item name="android:textSize">18sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:padding">2dp</item>
+        <item name="android:paddingRight">5dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
         
     
 </resources>
