--- a/CardAcountBook/res/layout/card_info_edit.xml
+++ b/CardAcountBook/res/layout/card_info_edit.xml
@@ -2,40 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/card_ace"
+    android:background="@drawable/other_background"
     android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:background="@drawable/border_edit_card_title"
         android:orientation="horizontal"
         android:padding="5dp" >
 
         <ImageView
             android:id="@+id/edit_card_image"
-            android:layout_width="60dp"
+            android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            android:padding="3dp" />
+            android:layout_weight="3"
+            android:padding="3dp"
+            android:src="@drawable/nh_chaum" />
 
         <TextView
             android:id="@+id/edit_card_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="1"
+            android:layout_weight="8"
+            android:ellipsize="marquee"
+            android:singleLine="true"
+            android:text="해피포인트 롯데카드에브리바디"
             android:textColor="@color/black"
             android:textSize="25dp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/edit_card_number"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="1"
+            android:layout_weight="3"
+            android:ellipsize="marquee"
+            android:singleLine="true"
+            android:text="1102-3332-4432-3344"
             android:textColor="@color/black"
             android:textSize="25dp"
             android:textStyle="bold" />
@@ -111,9 +118,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1.3"
             android:clickable="true"
+            android:paddingBottom="20dp"
             android:paddingLeft="20dp"
             android:paddingTop="20dp"
-            android:paddingBottom="20dp"
             android:text="@string/edit_t_amount"
             android:textColor="@color/black"
             android:textSize="20dp" />
@@ -125,9 +132,10 @@
             android:layout_weight="2"
             android:clickable="true"
             android:gravity="right"
+            android:paddingBottom="20dp"
             android:paddingRight="20dp"
             android:paddingTop="20dp"
-            android:paddingBottom="20dp"
+            android:singleLine="true"
             android:textColor="@color/black"
             android:textSize="20dp" />
     </LinearLayout>
