--- a/CardAcountBook/res/layout/main.xml
+++ b/CardAcountBook/res/layout/main.xml
@@ -51,6 +51,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/today_payment_view"
         android:layout_width="290dp"
         android:layout_height="100dp"
         android:layout_marginBottom="30dp"
@@ -58,7 +59,8 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/current_pay_background"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:clickable="true" >
 
         <TextView
             android:layout_width="fill_parent"
