--- a/CardAcountBook/res/layout/my_card_add_dlg_layout.xml
+++ b/CardAcountBook/res/layout/my_card_add_dlg_layout.xml
@@ -27,9 +27,9 @@
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:paddingTop="5dp"
+            android:singleLine="true"
             android:textColor="@color/white"
-            android:textSize="20dp"
-            android:singleLine="true" />
+            android:textSize="20dp" />
     </LinearLayout>
 
     <TableRow>
@@ -46,8 +46,8 @@
             android:layout_width="150dp"
             android:layout_height="39dp"
             android:digits="@string/my_card_add_card_number_digits"
-            android:inputType="phone"
             android:hint="@string/example_card_number"
+            android:inputType="phone"
             android:maxLength="19"
             android:singleLine="true" />
     </TableRow>
@@ -105,11 +105,12 @@
             style="@style/DetailEditDialogText"
             android:layout_width="150dp"
             android:layout_height="39dp"
-            android:hint="@string/example_price"
-            android:numeric="integer"
             android:digits="@string/my_card_add_target_price_digits"
-            android:singleLine="true"
-            android:inputType="number" />
+            android:hint="@string/example_price"
+            android:inputType="number"
+            android:maxLength="9"
+            android:numeric="integer"
+            android:singleLine="true" />
     </TableRow>
 
 </TableLayout>
