--- a/CardAcountBook/res/layout/my_card_list_layout.xml
+++ b/CardAcountBook/res/layout/my_card_list_layout.xml
@@ -1,56 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_root_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:orientation="vertical"
     android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:id="@+id/card_root_view" >
+    android:paddingRight="10dp" >
 
-    <ImageView
-        android:id="@+id/card_imageview"
-        android:layout_width="80dp"
-        android:layout_height="60dp"
-        android:layout_weight="1"
-        android:padding="3dp"
-        android:src="@drawable/nh_chaum" />
+    <FrameLayout
+        android:layout_width="200dp"
+        android:layout_height="wrap_content" >
+
+        <ImageView
+            android:id="@+id/card_imageview"
+            android:layout_width="200dp"
+            android:layout_height="130dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:padding="3dp"
+            android:src="@drawable/nh_chaum" />
+
+        <ImageView
+            android:id="@+id/card_phone_imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:paddingLeft="5dp"
+            android:src="@drawable/icon_phone_3" />
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/card_linearlayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="2"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/card_name_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:ellipsize="marquee"
+            android:gravity="center"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:paddingTop="5dp"
+            android:singleLine="true"
             android:textColor="@color/black"
-            android:textSize="20dp" />
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/card_num_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="5dp"
+            android:layout_gravity="center"
+            android:ellipsize="marquee"
+            android:gravity="center"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
+            android:singleLine="true"
             android:textColor="@color/black"
-            android:textSize="15dp" />
+            android:textSize="20sp" />
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/card_phone_imageview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:paddingLeft="5dp"
-        android:src="@drawable/icon_phone_3" />
 
 </LinearLayout>
