--- a/CardAcountBook/res/values/company_name_number.xml
+++ b/CardAcountBook/res/values/company_name_number.xml
@@ -3,11 +3,24 @@
 
     <string name="phoneNum_NH">15881600</string>
     <string name="phoneNum_KB">15881788</string>
+    <string name="phoneNum_CITY">15661000</string>
+    <string name="phoneNum_KEB">15886700</string>
+    <string name="phoneNum_saving_bank">15886622</string>
+    <string name="phoneNum_SHINHAN">15447200</string>
 
     <string name="NH_card">NH카드</string>
     <string name="KB_card">KB국민</string>
+    <string name="CITY_card">시티카드</string>
+    <string name="KEB_card">외환카드</string>
+    <string name="SHINHAN_card">신한카드</string>
     <string name="Lotte_card">롯데카드</string>
+    
     <string name="KB_check">KB국민체크</string>
     <string name="KB_credit">KB국민카드</string>
-    	
+
+    <string name="SHINHAN_blank_card_number">****</string>
+    
+    <string name="refusal_card_payment">거절</string>
+    <string name="refusal_cause">부족</string>
+    <string name="sms_form_error">form_error</string>
 </resources>
