--- a/CardAcountBook/res/layout/password_layout.xml
+++ b/CardAcountBook/res/layout/password_layout.xml
@@ -2,8 +2,49 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/other_background" >
-    
+    android:background="@drawable/other_background"
+    android:gravity="top"
+    android:orientation="vertical" >
+
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
+        android:gravity="center|top"
+        android:orientation="horizontal" >
+		
+        
+      
+        <EditText
+            android:id="@+id/pass1"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@drawable/edit_background"
+            android:textSize="50sp"
+            android:gravity="center"
+            />
+
+        <EditText
+            android:id="@+id/pass2"
+            android:layout_width="80dp"
+            android:layout_height="80dp" 
+            android:textSize="50sp"
+            android:gravity="center"/>
+
+        <EditText
+            android:id="@+id/pass3"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:textSize="50sp" 
+            android:gravity="center"/>
+
+        <EditText
+            android:id="@+id/pass4"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:textSize="50sp"
+            android:gravity="center" />
+    </LinearLayout>
 
 </LinearLayout>
